# lib-opencast-ingest

./: .gitignore  CMakeLists.txt  README.md  license
.circleci/: config.yml
src/: libOpencastIngest.cpp  libOpencastIngest.h  libOpencastIngest.hpp  test.cpp
